[BUGFIX] Center images that are wrapped in a link

--- a/Resources/Public/Less/Theme/image.less
+++ b/Resources/Public/Less/Theme/image.less
@@ -45,7 +45,7 @@
 		margin-top: @line-height-computed;
 	}
 }
-.image-center .image > img {
+.image-center .image > img, .image-center .image > a > img {
 	margin: 0 auto;
 }
 .image-center-outer {
